=#==============================================================
#
#  Name: RELEASE_NOTES
#
#  Rem:  This files describes release notes for
#        the XXX IOC Application.
#
#  Auth: xx-Dec-2012, XXX         (xxx)
#  Rev:  dd-mmm-yyyy, Reviewer's Name    (USERNAME)
#--------------------------------------------------------------
central_node_engine-R1-4-0:
  * Compatible with mps_database-R1-1-0, which has a change in the
    crates.number to crates.crate_id. This required code changes
    in this library.

central_node_engine-R1-3-3:
  * Implemented bypass for fast digital devices (they must have
    a single device input). The firmware configuration is reloaded
    when a fast digital input bypass is created or expires.

central_node_engine-R1-3-2:
  * Addition of functionality to allow forcing a power class to
    o beam destination (e.g. allow ops to shut off gun by setting
    a PV).
  * Addition of missing firmware call to run central node stand-alone,
    without connecting to central node card.

central_node_engine-R1-3-1:
  * Change introduced in R1-2-5 stops MPS whenever the update thread
    is stopped/started. Modified so it doesn't start MPS only after
    loading a configuration the first time.

central_node_engine-R1-3-0:
  * Addition of Firmware::beamFaultClear(), for clearing
    faults caused by power class or charge violation

central_node_engine-R1-2-5:
  * After config is loaded MPS is not enabled by default, user
    must enable it on the EDM panel

central_node_engine-R1-2-4:
  * Minor fix on the beam charge table readback - changed from 16 to 32 bits

central_node_engine-R1-2-3:
  * Restored loading beam charge table using database values
