@@ -8,6 +8,10 @@
 #  Auth: xx-Dec-2012, XXX         (xxx)
 #  Rev:  dd-mmm-yyyy, Reviewer's Name    (USERNAME)
 #--------------------------------------------------------------
+central_node_engine-R1-4-1: 
+  * Change to how the charge integration time is written to FW.
+    The value is broken up into bits 0:9 and 16:25. 
+
 central_node_engine-R1-4-0:
   * Compatible with mps_database-R1-1-0, which has a change in the
     crates.number to crates.crate_id. This required code changes
